--- a/settings.html
+++ b/settings.html
@@ -2,9 +2,14 @@
 <html>
 <head>
     <title>Chrome Registrar Settings</title>
+    <script src="resources/jquery-2.1.1.min.js"></script>
 </head>
 <body>
+Whoisology API Key:
+<input id="api_key" type="text">
 
+<div id="status"></div>
+<button id="save">Save</button>
 <script src="settings.js"></script>
 </body>
 </html>
